--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2858,6 +2858,7 @@ Multimedia API</a>. </big>
       8.4.2 – Base graphics subsystem improved.<br>
       8.4.3 – 8.4.5 – Small changes.<br>
       8.4.5.1 – Documentation updated.<br>
+      8.4.6 – Small changes.<br>
     </big>
   </body>
 </html>
