Picture subsystem improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2859,6 +2859,7 @@ Multimedia API</a>. </big>
       8.4.3 – 8.4.5 – Small changes.<br>
       8.4.5.1 – Documentation updated.<br>
       8.4.6 – Small changes.<br>
+      8.4.7 – 8.4.8 – Picture subsystem improved.<br>
     </big>
   </body>
 </html>
