--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -397,6 +397,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
+
         href="http://opengl.org">OPENGL</a> for render. Most modern video–card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -563,7 +564,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       Background is a big image. It is like decoration in theater stage. Any
       game has a background. The background will stretch to screen resolution
-      before rendering the game scene.<br>
+      before rendering the game scene. Background transparency is disabled.<br>
       <br>
       There are two background kinds: horizontal orientated scrolling background
       and vertical orientated scrolling background. It is a big image with few
@@ -712,6 +713,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         &amp;background);</span> – Load a background </big><big>from the buffer</big><big>.<br>
       <br>
     </big><big><span style="font-style: italic;">void Scene::load(</span></big><big
+
       style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
       – Load a background from target file.</big><br>
     <big><br>
@@ -1222,11 +1224,13 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       A new image will replace current image if current image already exist.
       Incorrect images will ignore and don't load.<br>
+      Source image will convert to BGRA format. Pixels equal to top-left pixel
+      will mark as transparent.<br>
       <br>
       <span style="text-decoration: underline;"> Supported format</span><br>
     </big>
     <p><big> All loading images must have correct specification. You can load an
-        image from 32 bit </big><big><a href="https://en.wikipedia.org/wiki/Truevision_TGA">Truevision
+        image from 24 bit </big><big><a href="https://en.wikipedia.org/wiki/Truevision_TGA">Truevision
           TGA</a> pictures. </big></p>
     <big><span style="text-decoration: underline;"> Recommend software</span><br>
       <br>
@@ -1373,7 +1377,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       </big></h2>
     <big><span style="text-decoration: underline;"></span> Isometric level
       subsystem intend for help you to create an isometric levels. Just use <span
-
         style="font-style: italic;">World</span> class for doing it. Let's look
       at public methods.<br>
       <br>
@@ -2425,14 +2428,14 @@ Multimedia API</a>. </big>
     <h1><a name="mozTocId78453" class="mozTocH1"></a><big>Version history</big></h1>
     <big> 0.1 – Initial version.<br>
       0.1.1 – 0.7.6 – Internal unstable builds.<br>
-      0.7.7 </big><big>–</big><big> Small changes.</big><big><br>
-      0.7.8 </big><big>–</big><big> Small bug in sprite subsystem fixed.</big><big><br>
-      0.7.9 </big><big>– </big><big>0.8.1 – Small changes.<br>
+      0.7.7 – Small changes.<br>
+      0.7.8 – Small bug in sprite subsystem fixed.<br>
+      0.7.9 – 0.8.1 – Small changes.<br>
       0.8.2 – Sprite subsystem improved.<br>
       0.8.3 – PCX support removed.<br>
       0.8.4 – Small changes.<br>
       0.8.5 – Fps counter improved.<br>
-      0.8.6 – 0.8.9 – Small changes.</big><big><br>
+      0.8.6 – 0.8.9 – Small changes.<br>
       0.9 – TGA support improved.<br>
       0.9.1 – Small bug in sprite subsystem fixed.<br>
       0.9.2 – Small changes.<br>
@@ -2445,18 +2448,18 @@ Multimedia API</a>. </big>
       1.0.4 – Small bug in sprite subsystem fixed.<br>
       1.0.5 – 1.1.4 – Small changes.<br>
       1.1.5 – 1.1.6 – Small bug fixed.<br>
-    </big><big>1.1.7 – Unused dependency removed.<br>
+      1.1.7 – Unused dependency removed.<br>
       1.1.8 – 1.2.5 – Small changes.<br>
       1.2.6 – Small bug fixed.<br>
       1.2.7 – Small changes.<br>
       1.2.8 – Render performance increased.<br>
       1.2.9 – Windows 2000 support added.<br>
-      1.3 – Small changes.</big><big><br>
-      1.3.1 – Image resizer improved.</big><big><br>
+      1.3 – Small changes.<br>
+      1.3.1 – Image resizer improved.<br>
       1.3.2 – Game–pad subsystem improved.<br>
       1.3.3 – Project name changed.<br>
-      1.3.4 – Sprite subsystem improved.</big><big><br>
-      1.3.5 – Small changes.</big><big><br>
+      1.3.4 – Sprite subsystem improved.<br>
+      1.3.5 – Small changes.<br>
       1.3.6 – Tile–set subsystem improved.<br>
       1.3.7 – Small changes.<br>
       1.3.8 – Sprite subsystem improved.<br>
@@ -2465,26 +2468,26 @@ Multimedia API</a>. </big>
       1.4.1 – Text subsystem improved.<br>
       1.4.2 – 1.4.5 – Small changes.<br>
       1.4.6 – New subsystem added. Windows 2000 support removed.<br>
-    </big><big>1.4.7 – 1.4.8 – Sprite subsystem improved.<br>
+      1.4.7 – 1.4.8 – Sprite subsystem improved.<br>
       1.4.9 – Text subsystem improved.<br>
-      1.5 – Small changes.</big><big><br>
+      1.5 – Small changes.<br>
       1.5.1 – Optional software render added.<br>
-      1.5.2 – </big><big>1.5.7 –</big><big> Small changes.<br>
-    </big><big>1.5.8 – Keyboard input improved.<br>
-    </big><big>1.5.9 – Mouse input improved.<br>
-    </big><big>1.6 – Game–pad support improved.</big><big><br>
-      1.6.1 – Small bug in game–pad subsystem fixed.</big><big><br>
+      1.5.2 – 1.5.7 – Small changes.<br>
+      1.5.8 – Keyboard input improved.<br>
+      1.5.9 – Mouse input improved.<br>
+      1.6 – Game–pad support improved.<br>
+      1.6.1 – Small bug in game–pad subsystem fixed.<br>
       1.6.2 – Small changes.<br>
-    </big><big>1.6.3 – File system subsystem improved.<br>
-    </big><big>1.6.4 – 1.6.5 – Small changes.<br>
-    </big><big>1.6.6 – Base graphics subsystem improved.<br>
-    </big><big>1.6.7 – Small changes.<br>
-    </big><big>1.6.8 – Game–pad support improved.<br>
-      1.6.9 – </big><big>1.7 –</big><big> Small changes.<br>
+      1.6.3 – File system subsystem improved.<br>
+      1.6.4 – 1.6.5 – Small changes.<br>
+      1.6.6 – Base graphics subsystem improved.<br>
+      1.6.7 – Small changes.<br>
+      1.6.8 – Game–pad support improved.<br>
+      1.6.9 – 1.7 – Small changes.<br>
       1.7.1 – Small bug in sprite subsystem fixed.<br>
       1.7.2 – Graphic primitives subsystem improved.<br>
       1.7.3 – 1.7.4 – Small changes.<br>
-      1.7.5 – </big><big>1.7.6 –</big><big> Picture subsystem improved.<br>
+      1.7.5 – 1.7.6 – Picture subsystem improved.<br>
       1.7.7 – 1.7.8 – Sprite subsystem improved.<br>
       1.7.9 – 1.8 – Picture subsystem improved.<br>
       1.8.1 – Small changes.<br>
@@ -2499,7 +2502,7 @@ Multimedia API</a>. </big>
       1.9.4 – Tile–set subsystem improved.<br>
       1.9.5 – 1.9.8 – Small changes.<br>
       1.9.9 – Background subsystem improved.<br>
-      2.0 – </big><big>2.0.3 –</big><big> Image loader improved.<br>
+      2.0 – 2.0.3 – Image loader improved.<br>
       2.0.4 – Sprite subsystem improved.<br>
       2.0.5 – Background subsystem improved.<br>
       2.0.6 – 2.1.2 – Text drawing subsystem improved.<br>
@@ -2535,7 +2538,7 @@ Multimedia API</a>. </big>
       2.6.8 – Primitive subsystem improved.<br>
       2.6.9 – Small bug fixed.<br>
       2.7 – Primitive subsystem removed.<br>
-    </big><big> 2.7.1 – 2.7.6 – Preview release of next branch.<br>
+      2.7.1 – 2.7.6 – Preview release of next branch.<br>
       2.7.7 – Public release of next branch.<br>
       2.7.8 – 2.7.9 – Small changes.<br>
       2.8 – Go back to old stable branch.<br>
@@ -2693,7 +2696,7 @@ Multimedia API</a>. </big>
       6.0.9 – 6.1.1 – Small changes.<br>
       6.1.2 – Text drawing subsystem improved.<br>
       6.1.3 – Small changes.<br>
-    </big><big> 6.1.3.1 – Documentation updated.<br>
+      6.1.3.1 – Documentation updated.<br>
       6.1.4 – Small bug fixed.<br>
       6.1.5 – 6.1.6 – Sprite sheet subsystem improved.<br>
       6.1.7 – 6.2.1 – Small changes.<br>
@@ -2717,8 +2720,8 @@ Multimedia API</a>. </big>
       6.4.1.1 – Documentation updated.<br>
       6.4.2 – Image loader improved.<br>
       6.4.3 – Base sprite subsystem improved.<br>
-    </big><big>6.4.4 – Ordinary sprite subsystem improved.<br>
-      6.4.5 – </big><big>6.4.6 –</big><big> Background subsystem improved.<br>
+      6.4.4 – Ordinary sprite subsystem improved.<br>
+      6.4.5 – 6.4.6 – Background subsystem improved.<br>
       6.4.7 – Sprite sheet subsystem improved.<br>
       6.4.8 – 6.4.9 – Text drawing subsystem improved.<br>
       6.5 – Ordinary sprite subsystem improved.<br>
@@ -2776,7 +2779,8 @@ Multimedia API</a>. </big>
       7.2.6 – 7.2.9 – Image resizer improved.<br>
       7.3 – 7.3.1 – Small changes.<br>
       7.3.2 – Small render bug fixed.<br>
-      7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
+      7.3.3 – Animation subsystem back-ported from Eugene game development kit
+      5.6.2.<br>
       7.3.4 – Background subsystem improved.<br>
       7.3.5 – Small changes.<br>
       7.3.6 – Source code synced with Simple windows game framework 7.3.5.<br>
@@ -2846,10 +2850,10 @@ Multimedia API</a>. </big>
       8.3 – Small bug fixed.<br>
       8.3.1 – Small changes.<br>
       8.3.2 – Render performance increased.<br>
-    </big><big> 8.3.3 – Animation subsystem improved.</big><br>
-    <big> 8.3.4 – Background subsystem improved.<br>
-    </big><big> 8.3.5 – Source code synced with Neon game development kit 7.2.9.<br>
-    </big><big> 8.3.6 – Small changes.<br>
+      8.3.3 – Animation subsystem improved.<br>
+      8.3.4 – Background subsystem improved.<br>
+      8.3.5 – Source code synced with Neon game development kit 7.2.9.<br>
+      8.3.6 – Small changes.<br>
       8.3.7 – Source code synced with Neon game development kit 7.3.<br>
       8.3.8 – Source code synced with Neon game development kit 7.3.1.<br>
       8.3.9 – Source code synced with Neon game development kit 7.3.2.<br>
@@ -2860,6 +2864,8 @@ Multimedia API</a>. </big>
       8.4.5.1 – Documentation updated.<br>
       8.4.6 – Small changes.<br>
       8.4.7 – 8.4.8 – Picture subsystem improved.<br>
+      8.4.9 – Image loader improved.<br>
+      8.5 – Small changes.<br>
     </big>
   </body>
 </html>
