--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -397,7 +397,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
-
         href="http://opengl.org">OPENGL</a> for render. Most modern video–card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -948,7 +947,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       The static sprite is simple kind of sprites. It contain one frame only.<br>
       <br>
     </big><big><span style="text-decoration: underline;"></span></big><big> <span
-
         style="text-decoration: underline;"> Work with static sprites</span><br>
       <br>
       Just use <span style="font-style: italic;">Cartoon</span> class to work
@@ -1224,8 +1222,8 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       A new image will replace current image if current image already exist.
       Incorrect images will ignore and don't load.<br>
-      Source image will convert to BGRA format. Pixels equal to top-left pixel
-      will mark as transparent.<br>
+      Source image will convert to <a href="https://en.wikipedia.org/wiki/RGBA">RGBA</a>
+      format. Pixels equal to top-left pixel will mark as transparent.<br>
       <br>
       <span style="text-decoration: underline;"> Supported format</span><br>
     </big>
@@ -1377,6 +1375,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       </big></h2>
     <big><span style="text-decoration: underline;"></span> Isometric level
       subsystem intend for help you to create an isometric levels. Just use <span
+
         style="font-style: italic;">World</span> class for doing it. Let's look
       at public methods.<br>
       <br>
@@ -1565,6 +1564,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Return true if the column is valid.<br>
       <br>
       <span style="font-style: italic;">EUGENEGDK::BOX Tilemap::get_box(</span></big><big
+
       style="font-style: italic;">const </big><big style="font-style: italic;">unsigned
       int row,const unsigned int column</big><big><span style="font-style: italic;">)
         const;</span> – Return collision related information.<br>
@@ -2779,8 +2779,7 @@ Multimedia API</a>. </big>
       7.2.6 – 7.2.9 – Image resizer improved.<br>
       7.3 – 7.3.1 – Small changes.<br>
       7.3.2 – Small render bug fixed.<br>
-      7.3.3 – Animation subsystem back-ported from Eugene game development kit
-      5.6.2.<br>
+      7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
       7.3.4 – Background subsystem improved.<br>
       7.3.5 – Small changes.<br>
       7.3.6 – Source code synced with Simple windows game framework 7.3.5.<br>
@@ -2866,6 +2865,7 @@ Multimedia API</a>. </big>
       8.4.7 – 8.4.8 – Picture subsystem improved.<br>
       8.4.9 – Image loader improved.<br>
       8.5 – Small changes.<br>
+      8.5.0.1 – Documentation updated.<br>
     </big>
   </body>
 </html>
