--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2866,6 +2866,7 @@ Multimedia API</a>. </big>
       8.4.9 – Image loader improved.<br>
       8.5 – Small changes.<br>
       8.5.0.1 – Documentation updated.<br>
+      8.5.1 – 8.5.5 – Small changes.<br>
     </big>
   </body>
 </html>
