--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2877,7 +2877,7 @@ Multimedia API</a>. </big>
       8.5.0.1 – Documentation updated.<br>
       8.5.1 – 8.5.5 – Small changes.<br>
       8.5.6 – 8.5.7 – Image loader improved.<br>
-      8.5.8 – Small changes.<br>
+      8.5.8 – 8.5.9 – Small changes.<br>
     </big>
   </body>
 </html>
