--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -947,7 +947,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       The static sprite is simple kind of sprites. It contain one frame only.<br>
       <br>
     </big><big><span style="text-decoration: underline;"></span></big><big> <span
-
         style="text-decoration: underline;"> Work with static sprites</span><br>
       <br>
       Just use <span style="font-style: italic;">Cartoon</span> class to work
@@ -1215,15 +1214,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       <span style="font-style: italic;"> Image* Image::get_handle();</span> –
       Return the handle to image loader.<br>
-      <br>
-      <span style="font-style: italic;">void Image::horizontal_mirror();</span>
-      – Do horizontal image mirror.<br>
-      <br>
-      <span style="font-style: italic;">void Image::vertical_mirror();</span> –
-      Do vertical image mirror.<br>
-      <br>
-      <span style="font-style: italic;">void Image::complex_mirror();</span> –
-      Do both horizontal and vertical image mirror.<br>
       <br>
       <span style="font-style: italic;"> void Image::destroy_image();</span> –
       Destroy the current image and free image buffer.<br>
@@ -1676,10 +1666,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Exit from your program and return user to operating system.<br>
       <br>
       <span style="font-style: italic;">bool enable_logging(const char *name); </span></big><big>–</big><big><span
+
         style="font-style: italic;"></span> Enable redirecting error messages to
       a log file and return false if the operation failed.<br>
       <br>
       <span style="font-style: italic;">void randomize(); </span></big><big>–</big><big><span
+
         style="font-style: italic;"></span> Initialize random number generator.<br>
       <br>
       <span style="font-style: italic;">unsigned int get_random(const int
@@ -2788,7 +2780,8 @@ Multimedia API</a>. </big>
       7.2.6 – 7.2.9 – Image resizer improved.<br>
       7.3 – 7.3.1 – Small changes.<br>
       7.3.2 – Small render bug fixed.<br>
-      7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
+      7.3.3 – Animation subsystem back-ported from Eugene game development kit
+      5.6.2.<br>
       7.3.4 – Background subsystem improved.<br>
       7.3.5 – Small changes.<br>
       7.3.6 – Source code synced with Simple windows game framework 7.3.5.<br>
@@ -2849,7 +2842,8 @@ Multimedia API</a>. </big>
       8.1.5 – Image resizer improved.<br>
       8.1.6 – 8.1.7 – Small changes.<br>
       8.1.8 – Small bug in the tile-map subsystem fixed.<br>
-      8.1.9 – Small bug with keyboard input subsystem and mouse input subsystem fixed.<br>
+      8.1.9 – Small bug with keyboard input subsystem and mouse input subsystem
+      fixed.<br>
       8.2 – Ordinary sprite subsystem improved.<br>
       8.2.1 – Background subsystem improved.<br>
       8.2.2 – Render performance increased.<br>
@@ -2877,7 +2871,7 @@ Multimedia API</a>. </big>
       8.5.0.1 – Documentation updated.<br>
       8.5.1 – 8.5.5 – Small changes.<br>
       8.5.6 – 8.5.7 – Image loader improved.<br>
-      8.5.8 – 8.6 – Small changes.<br>
+      8.5.8 – 8.6.1 – Small changes.<br>
     </big>
   </body>
 </html>
