--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2872,6 +2872,7 @@ Multimedia API</a>. </big>
       8.5.1 – 8.5.5 – Small changes.<br>
       8.5.6 – 8.5.7 – Image loader improved.<br>
       8.5.8 – 8.6.4 – Small changes.<br>
+      8.6.5 – Render improved.<br>
     </big>
   </body>
 </html>
