Collision detection subsystem improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -1476,16 +1476,16 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       – Return the handle to the collision detector.<br>
     </big><br>
     <big><span style="font-style: italic;">void Collision::set_target(const
-        EUGENEGDK::BOX &amp;first_target,const EUGENEGDK::BOX
-        &amp;second_target);</span> – Set targets for collision detector.<br>
+        EUGENEGDK::BOX first_target,const EUGENEGDK::BOX
+        second_target);</span> – Set targets for collision detector.<br>
       <br>
       <span style="font-style: italic;"> bool Collision::check_collision()
         const;</span> – Return true if collision between two objects is
       accepted.<br>
       <br>
       <span style="font-style: italic;"> bool Collision::check_collision(const
-        EUGENEGDK::BOX &amp;first_target,const EUGENEGDK::BOX
-        &amp;second_target);</span> – Set collision targets and check collision
+        EUGENEGDK::BOX first_target,const EUGENEGDK::BOX
+        second_target);</span> – Set collision targets and check collision
       between it.<br>
     </big>
     <h2><a class="mozTocH2" name="mozTocId429738"></a><big>Chapter 5. Tile</big><big>–</big><big>map</big></h2>
@@ -2780,8 +2780,7 @@ Multimedia API</a>. </big>
       7.2.6 – 7.2.9 – Image resizer improved.<br>
       7.3 – 7.3.1 – Small changes.<br>
       7.3.2 – Small render bug fixed.<br>
-      7.3.3 – Animation subsystem back-ported from Eugene game development kit
-      5.6.2.<br>
+      7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
       7.3.4 – Background subsystem improved.<br>
       7.3.5 – Small changes.<br>
       7.3.6 – Source code synced with Simple windows game framework 7.3.5.<br>
@@ -2842,8 +2841,7 @@ Multimedia API</a>. </big>
       8.1.5 – Image resizer improved.<br>
       8.1.6 – 8.1.7 – Small changes.<br>
       8.1.8 – Small bug in the tile-map subsystem fixed.<br>
-      8.1.9 – Small bug with keyboard input subsystem and mouse input subsystem
-      fixed.<br>
+      8.1.9 – Small bug with keyboard input subsystem and mouse input subsystem fixed.<br>
       8.2 – Ordinary sprite subsystem improved.<br>
       8.2.1 – Background subsystem improved.<br>
       8.2.2 – Render performance increased.<br>
@@ -2873,6 +2871,7 @@ Multimedia API</a>. </big>
       8.5.6 – 8.5.7 – Image loader improved.<br>
       8.5.8 – 8.6.4 – Small changes.<br>
       8.6.5 – Render improved.<br>
+      8.6.6 – Collision detection subsystem improved.<br>
     </big>
   </body>
 </html>
