Sprite sheet subsystem improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2873,6 +2873,8 @@ Multimedia API</a>. </big>
       8.6.5 – Render improved.<br>
       8.6.6 – Collision detection subsystem improved.<br>
       8.6.7 – 8.6.9 – Small changes.<br>
+      8.7 – Sprite sheet subsystem improved.<br>
+      8.7.1 – Small bug fixed.<br>
     </big>
   </body>
 </html>
