--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2875,6 +2875,7 @@ Multimedia API</a>. </big>
       8.6.7 – 8.6.9 – Small changes.<br>
       8.7 – Sprite sheet subsystem improved.<br>
       8.7.1 – Small bug fixed.<br>
+      8.7.2 – Small changes.<br>
     </big>
   </body>
 </html>
