Small bug fixed

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2876,6 +2876,7 @@ Multimedia API</a>. </big>
       8.7 – Sprite sheet subsystem improved.<br>
       8.7.1 – Small bug fixed.<br>
       8.7.2 – Small changes.<br>
+      8.7.3 – Small bug fixed.<br>
     </big>
   </body>
 </html>
