--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2877,6 +2877,8 @@ Multimedia API</a>. </big>
       8.7.1 – Small bug fixed.<br>
       8.7.2 – Small changes.<br>
       8.7.3 – Small bug fixed.<br>
+      8.7.4 – Source code synced with Black game development kit 5.6.8.<br>
+      8.7.5 – Source code synced with Black game development kit 5.6.9.<br>
     </big>
   </body>
 </html>
