--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -454,7 +454,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;"> unsigned int Screen::get_fps() const;</span>
       – Return current fps value.<br>
       <br>
-      <span style="font-style: italic;"> unsigned long int Screen::get_color()
+      <span style="font-style: italic;"> unsigned int Screen::get_color()
         const;</span> – Return current color depth in bits per pixel.<br>
       <br>
       <span style="font-style: italic;"> unsigned int Screen::get_width() const;</span>
@@ -2879,7 +2879,7 @@ Multimedia API</a>. </big>
       8.7.3 – Small bug fixed.<br>
       8.7.4 – Source code synced with Black game development kit 5.6.8.<br>
       8.7.5 – Source code synced with Black game development kit 5.6.9.<br>
-      8.7.6 – 8.7.7 – Small changes.<br>
+      8.7.6 – 8.7.8 – Small changes.<br>
     </big>
   </body>
 </html>
