--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2880,6 +2880,7 @@ Multimedia API</a>. </big>
       8.7.4 – Source code synced with Black game development kit 5.6.8.<br>
       8.7.5 – Source code synced with Black game development kit 5.6.9.<br>
       8.7.6 – 8.7.9 – Small changes.<br>
+      8.8 – Source code synced with Black game development kit 5.7.6.<br>
     </big>
   </body>
 </html>
