Synchronization timer back-ported from Neon game development kit 7.5.8

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2881,6 +2881,7 @@ Multimedia API</a>. </big>
       8.7.5 – Source code synced with Black game development kit 5.6.9.<br>
       8.7.6 – 8.7.9 – Small changes.<br>
       8.8 – Source code synced with Black game development kit 5.7.6.<br>
+      8.8.1 – Synchronization timer back-ported from Neon game development kit 7.5.8.<br>
     </big>
   </body>
 </html>
