Synchronization timer back-ported from Neon game development kit 7.7.7

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2882,6 +2882,7 @@ Multimedia API</a>. </big>
       8.7.6 – 8.7.9 – Small changes.<br>
       8.8 – Source code synced with Black game development kit 5.7.6.<br>
       8.8.1 – Synchronization timer back-ported from Neon game development kit 7.5.8.<br>
+      8.8.2 – Synchronization timer back-ported from Neon game development kit 7.7.7.<br>
     </big>
   </body>
 </html>
