--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2889,6 +2889,7 @@ Multimedia API</a>. </big>
       8.8.1 – Synchronization timer back-ported from Neon game development kit 7.5.8.<br>
       8.8.2 – Synchronization timer back-ported from Neon game development kit 7.7.7.<br>
       8.8.3 – Memory subsystem improved.<br>
+      8.8.4 – Small bug fixed.<br>
     </big>
   </body>
 </html>
