--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -1195,7 +1195,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       methods.<br>
       <br>
       <span style="font-style: italic;"> </span></big><big><span style="font-style: italic;">unsigned
-        char *</span></big><big><span style="font-style: italic;">Image::load_tga(const
+        char *</span></big><big><span style="font-style: italic;">Image::load(const
         char *name);</span> – Load a Truevision TGA image and return handle to
       image buffer.<br>
       <br>
@@ -2890,6 +2890,7 @@ Multimedia API</a>. </big>
       8.8.2 – Synchronization timer back-ported from Neon game development kit 7.7.7.<br>
       8.8.3 – Memory subsystem improved.<br>
       8.8.4 – Small bug fixed.<br>
+      8.8.5 – Small changes.<br>
     </big>
   </body>
 </html>
